// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show custom required message 1`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
      requiredMessage="please input this field"
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
      </div>
    </FormField>
  </form>
</Form>
`;

exports[`show custom required message 2`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
      requiredMessage="please input this field"
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
            value=""
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
        <FormError
          name="input"
        >
          <span
            className="validation-message"
          >
            please input this field
          </span>
        </FormError>
      </div>
    </FormField>
  </form>
</Form>
`;

exports[`show required message after form submit 1`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
      </div>
    </FormField>
  </form>
</Form>
`;

exports[`show required message after form submit 2`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
        <FormError
          name="input"
        >
          <span
            className="validation-message"
          >
            This field is required.
          </span>
        </FormError>
      </div>
    </FormField>
  </form>
</Form>
`;

exports[`show required message after touched 1`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
      </div>
    </FormField>
  </form>
</Form>
`;

exports[`show required message after touched 2`] = `
<Form
  onSubmit={[Function]}
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormField
      label="input"
      name="input"
      required={true}
    >
      <div
        className="form-field"
      >
        <label
          className="field-label"
          htmlFor="input"
        >
          <span
            className="required"
          >
            *
          </span>
          <span
            className="label"
          >
            input
          </span>
        </label>
        <div
          className="field-input"
        >
          <Input
            api={
              Object {
                "addField": [Function],
                "changeField": [Function],
                "getErrors": [Function],
                "getTouched": [Function],
                "getValues": [Function],
                "removeField": [Function],
                "setValue": [Function],
              }
            }
            changeFieldValue={[Function]}
            name="input"
            value=""
          >
            <input
              className="input"
              id="input"
              onChange={[Function]}
              value=""
            />
          </Input>
        </div>
        <FormError
          name="input"
        >
          <span
            className="validation-message"
          >
            This field is required.
          </span>
        </FormError>
      </div>
    </FormField>
  </form>
</Form>
`;
